--- a/index.html
+++ b/index.html
@@ -9,15 +9,15 @@
     <title>Mesto</title>
 </head>
 <body class="page">
-    <section class="edit-form">
-        <img class="edit-form__close-icon" src="./images/Close Icon.svg" alt="Закрыть">
+    <form class="edit-form">
+        <div class="edit-form__close-icon edit-form__close-icon_hover"></div>
         <div class="popup-container">
             <h2 class="popup-container__title">Редактировать профиль</h2>
             <input class="popup-container__name" type="text" value="Жак-Ив Кусто">
             <input class="popup-container__job" type="text" value="Исследователь океана">
-            <input class="popup-container__button" type="submit" value="Сохранить">
+            <button class="popup-container__button" type="submit">Сохранить</button>
         </div>
-    </section>
+    </form>
     <header class="header">
         <img class="header__logo" src="./images/logo.svg" alt="Логотип"> <!--Логотип-->
     </header>
@@ -28,12 +28,12 @@
                 <div class="profile__info">
                     <div class="profile__container_top">
                         <h2 class="profile__info-title">Жак-Ив Кусто</h2>
-                        <img class="profile__info-edit-button" src="./images/Edit Button.svg">
+                        <button class="profile__info-edit-button"></button>
                     </div>
                     <p class="profile__info-subtitle">Исследователь океана</p>
                 </div> 
             </div>
-            <img class="profile__add-button" src="./images/Add Button.svg">
+            <button class="profile__add-button"></button>
         </section>
         <section class="elements">
             <div class="element">
