--- a/index.html
+++ b/index.html
@@ -4,18 +4,19 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="./style.css" rel="stylesheet">
-    <link href="./fonts/fonts.css" rel="stylesheet">
+    <link href="./pages/index.css" rel="stylesheet">
     <title>Mesto</title>
 </head>
 <body class="page">
     <form class="edit-form">
+        <div class="edif-form__container">   
         <div class="edit-form__close-icon edit-form__close-icon_hover"></div>
         <div class="popup-container">
             <h2 class="popup-container__title">Редактировать профиль</h2>
-            <input class="popup-container__name" type="text" value="Жак-Ив Кусто">
-            <input class="popup-container__job" type="text" value="Исследователь океана">
+            <input class="popup-container__name" type="text" value="Жак-Ив Кусто" placeholder="Имя" maxlength="24">
+            <input class="popup-container__job" type="text" value="Исследователь океана" placeholder="Деятельность" maxlength="24">
             <button class="popup-container__button" type="submit">Сохранить</button>
+        </div>
         </div>
     </form>
     <header class="header">
@@ -26,7 +27,7 @@
             <div class="profile__container">
                 <img class="profile__avatar" src="./images/profile__avatar.png" alt="Аватар">
                 <div class="profile__info">
-                    <div class="profile__container_top">
+                    <div class="profile__info_top">
                         <h2 class="profile__info-title">Жак-Ив Кусто</h2>
                         <button class="profile__info-edit-button"></button>
                     </div>
@@ -36,48 +37,50 @@
             <button class="profile__add-button"></button>
         </section>
         <section class="elements">
-            <div class="element">
-                <img class="element__image" src="./images/karachaevsk.png" alt="Карачаевск">
-                <div class="element__container">   
-                    <h2 class="element__text">Карачаевск</h2>
-                    <div class="element__like"></div>
-                </div>
-            </div>
-            <div class="element">
-                <img class="element__image" src="./images/ElbrusMountain.png" alt="Гора Эльбрус">
-                <div class="element__container"> 
-                    <h2 class="element__text">Гора Эльбрус</h2>
-                    <div class="element__like"></div>
-                </div>
-            </div>
-            <div class="element">
-                <img class="element__image" src="./images/Dombay.png" alt="Домбай">
-                <div class="element__container"> 
-                    <h2 class="element__text">Домбай</h2>
-                    <div class="element__like"></div>
-                </div>
-            </div>
-            <div class="element">
-                <img class="element__image" src="./images/ElbrusMountain.png" alt="Гора Эльбрус">
-                <div class="element__container"> 
-                    <h2 class="element__text">Гора Эльбрус</h2>
-                    <div class="element__like"></div>
-                </div>
-            </div>
-            <div class="element">
-                <img class="element__image" src="./images/Dombay.png" alt="Домбай">
-                <div class="element__container"> 
-                    <h2 class="element__text">Домбай</h2>
-                    <div class="element__like"></div>
-                </div>
-            </div>
-            <div class="element">
-                <img class="element__image" src="./images/karachaevsk.png" alt="Карачаево-Черкесия">
-                <div class="element__container"> 
-                    <h2 class="element__text">Карачаево-Ч...</h2>
-                    <div class="element__like"></div>
-                </div>
-            </div>
+            <ul class="elements__list">
+                <li class="element">
+                    <img class="element__image" src="./images/karachaevsk.png" alt="Карачаевск">
+                    <div class="element__container">   
+                        <h2 class="element__text">Карачаевск</h2>
+                        <div class="element__like"></div>
+                    </div>
+                </li>
+                <li class="element">
+                    <img class="element__image" src="./images/ElbrusMountain.png" alt="Гора Эльбрус">
+                    <div class="element__container"> 
+                        <h2 class="element__text">Гора Эльбрус</h2>
+                        <div class="element__like"></div>
+                    </div>
+                </li>
+                <li class="element">
+                    <img class="element__image" src="./images/Dombay.png" alt="Домбай">
+                    <div class="element__container"> 
+                        <h2 class="element__text">Домбай</h2>
+                        <div class="element__like"></div>
+                    </div>
+                </li>
+                <li class="element">
+                    <img class="element__image" src="./images/ElbrusMountain.png" alt="Гора Эльбрус">
+                    <div class="element__container"> 
+                        <h2 class="element__text">Гора Эльбрус</h2>
+                        <div class="element__like"></div>
+                    </div>
+                </li>
+                <li class="element">
+                    <img class="element__image" src="./images/Dombay.png" alt="Домбай">
+                    <div class="element__container"> 
+                        <h2 class="element__text">Домбай</h2>
+                        <div class="element__like"></div>
+                    </div>
+                </li>
+                <li class="element">
+                    <img class="element__image" src="./images/karachaevsk.png" alt="Карачаево-Черкесия">
+                    <div class="element__container"> 
+                        <h2 class="element__text">Карачаево-Ч...</h2>
+                        <div class="element__like"></div>
+                    </div>
+                </li>
+            </ul>
         </section>
     </main>
     <footer class="footer">
