--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body class="page">
     <form class="edit-form">
-        <div class="edif-form__container">   
+        <div class="edit-form__container">   
         <div class="edit-form__close-icon edit-form__close-icon_hover"></div>
         <div class="popup-container">
             <h2 class="popup-container__title">Редактировать профиль</h2>
@@ -27,7 +27,7 @@
             <div class="profile__container">
                 <img class="profile__avatar" src="./images/profile__avatar.png" alt="Аватар">
                 <div class="profile__info">
-                    <div class="profile__info_top">
+                    <div class="profile__container_top">
                         <h2 class="profile__info-title">Жак-Ив Кусто</h2>
                         <button class="profile__info-edit-button"></button>
                     </div>
