fix: назвать по БЭМ блок profile

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             <div class="profile__container">
                 <img class="profile__avatar" src="./images/profile__avatar.png" alt="Аватар">
                 <div class="profile__info">
-                    <div class="profile__container_top">
+                    <div class="profile__info-top">
                         <h2 class="profile__info-title">Жак-Ив Кусто</h2>
                         <button class="profile__info-edit-button"></button>
                     </div>
