--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                     <p class="profile__info-subtitle">Исследователь океана</p>
                 </div> 
             </div>
-            <button class="profile__add-button" type="button"><img class="profile__add-button_plus" src="./images/Add-button.svg" alt="+"></button>
+            <button class="profile__add-button" type="button"><img class="profile__add-button_plus" src="./images/Add-button.svg" alt="Добавить"></button>
         </section>
         <section class="elements">
             <ul class="elements__list">
