fix: Исправить после ревью №3

--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
         <button class="popup__close-icon" type="reset"></button>
         <form class="popup__form" name="form">
             <h2 class="popup__title">Редактировать профиль</h2>
-            <input class="popup__input popup__input_mod-name_mod-value" type="text" value="" placeholder="Имя" name="name">
-            <input class="popup__input popup__input_mod-job_mod-value" type="text" value="" placeholder="Деятельность" name="job">
+            <input class="popup__input popup__input_type_name" type="text" value="" placeholder="Имя" name="name">
+            <input class="popup__input popup__input_type_job" type="text" value="" placeholder="Деятельность" name="job">
             <button class="popup__button" type="submit">Сохранить</button>
         </form>
         </div>
@@ -76,7 +76,7 @@
                 <li class="element">
                     <img class="element__image" src="./images/karachaevsk.png" alt="Карачаево-Черкесия">
                     <div class="element__container"> 
-                        <h2 class="element__text">Карачаево-Ч...</h2>
+                        <h2 class="element__text">Карачаево-Черкесия</h2>
                         <button class="element__like" type="button"></button>
                     </div>
                 </li>
