--- a/index.html
+++ b/index.html
@@ -8,35 +8,6 @@
     <title>Mesto</title>
 </head>
 <body class="page">
-    <div class="popup popup_type_profile">
-        <div class="popup__container">   
-        <button class="popup__close-icon popup__close-profile" type="reset"></button>
-        <form class="popup__form popup__form-profile" name="form">
-            <h2 class="popup__title">Редактировать профиль</h2>
-            <input class="popup__input popup__input_type_name" type="text" value="" placeholder="Имя" name="name">
-            <input class="popup__input popup__input_type_job" type="text" value="" placeholder="Деятельность" name="job">
-            <button class="popup__button" type="submit">Сохранить</button>
-        </form>
-        </div>
-    </div>
-    <div class="popup popup_type_card">
-        <div class="popup__container">   
-        <button class="popup__close-icon popup__close-card" type="reset"></button>
-        <form class="popup__form popup__form-card" name="form">
-            <h2 class="popup__title">Новое место</h2>
-            <input class="popup__input popup__input_type_title" type="text" value="" placeholder="Название" name="title">
-            <input class="popup__input popup__input_type_link" type="text" value="" placeholder="Ссылка на картинку" name="link">
-            <button class="popup__button" type="submit">Создать</button>
-        </form>
-        </div>
-    </div>
-    <div class="popup popup_type_image">
-        <div class="popup__container popup__container_image">
-            <button class="popup__close-icon popup__close-image" type="reset"></button>
-            <img class="popup__image">
-            <p class="popup__subtitle"></p>
-        </div>
-    </div>
     <header class="header">
         <img class="header__logo" src="./images/logo.svg" alt="Логотип"> <!--Логотип-->
     </header>
@@ -62,9 +33,38 @@
     <footer class="footer">
         <p class="footer__copyright"> © 2020 Mesto Russia</p>
     </footer>
+    <div class="popup popup_type_profile">
+        <div class="popup__container">   
+        <button class="popup__close-icon popup__close-profile" type="reset"></button>
+        <form class="popup__form popup__form-profile" name="form">
+            <h2 class="popup__title">Редактировать профиль</h2>
+            <input class="popup__input popup__input_type_name" type="text" value="" placeholder="Имя" name="name">
+            <input class="popup__input popup__input_type_job" type="text" value="" placeholder="Деятельность" name="job">
+            <button class="popup__button" type="submit">Сохранить</button>
+        </form>
+        </div>
+    </div>
+    <div class="popup popup_type_card">
+        <div class="popup__container">   
+        <button class="popup__close-icon popup__close-card" type="reset"></button>
+        <form class="popup__form popup__form-card" name="form">
+            <h2 class="popup__title">Новое место</h2>
+            <input class="popup__input popup__input_type_title" type="text" value="" placeholder="Название" name="title" required>
+            <input class="popup__input popup__input_type_link" type="url" value="" placeholder="Ссылка на картинку" name="link" required>
+            <button class="popup__button" type="submit">Создать</button>
+        </form>
+        </div>
+    </div>
+    <div class="popup popup_type_image">
+        <div class="popup__wrapper-image">
+            <button class="popup__close-icon popup__close-image" type="reset"></button>
+            <img class="popup__image" alt="">
+            <p class="popup__subtitle"></p>
+        </div>
+    </div>
     <template class="element-template">
         <li class="element">
-            <img class="element__image">
+            <img class="element__image" alt="">
             <img class="element__delete">
             <div class="element__container"> 
                 <h2 class="element__text"></h2>
@@ -72,6 +72,7 @@
             </div>
         </li>
     </template>
+    <script src="./scripts/cards.js"></script>
     <script src="./scripts/script.js"></script>
 </body>
 </html>
