--- a/index.html
+++ b/index.html
@@ -87,6 +87,7 @@
             </div>
         </li>
     </template>
+    <script src="./scripts/validate.js"></script>
     <script src="./scripts/cards.js"></script>
     <script src="./scripts/script.js"></script>
 </body>
