refactor: Добавить классы Section, Popup, PopupWithForm, PopupWithImage, UserIfno

--- a/src/index.html
+++ b/src/index.html
@@ -4,17 +4,16 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="./pages/index.css" rel="stylesheet">
     <title>Mesto</title>
 </head>
 <body class="page">
     <header class="header">
-        <img class="header__logo" src="./images/logo.svg" alt="Логотип"> <!--Логотип-->
+        <img class="header__logo" src="../images/logo.svg" alt="Логотип">
     </header>
     <main class="content">
         <section class="profile">
             <div class="profile__container">
-                <img class="profile__avatar" src="./images/profile__avatar.png" alt="Аватар">
+                <img class="profile__avatar" src="../images/profile__avatar.png" alt="Аватар">
                 <div class="profile__info">
                     <div class="profile__info-top">
                         <h1 class="profile__info-title">Жак-Ив Кусто</h1>
@@ -87,6 +86,5 @@
             </div>
         </li>
     </template>
-    <script src="./scripts/index.js" type="module"></script>
 </body>
 </html>
