--- a/src/index.html
+++ b/src/index.html
@@ -36,7 +36,7 @@
         <div class="popup__overlay"></div>
         <div class="popup__container">   
             <button class="popup__close-icon popup__close-profile" type="reset"></button>
-            <form class="popup__form popup__form-profile" name="form" novalidate>
+            <form class="popup__form popup__form-profile" name="form-profile" novalidate>
                 <h2 class="popup__title">Редактировать профиль</h2>
                 <div class="popup__field popup__field_top">
                     <input class="popup__input popup__input_type_name" type="text" value="" placeholder="Имя" name="name" id="name-input" minlength="2" maxlength="40" required>
@@ -54,7 +54,7 @@
         <div class="popup__overlay"></div>
         <div class="popup__container">   
             <button class="popup__close-icon popup__close-card" type="reset"></button>
-            <form class="popup__form popup__form-card" name="form" novalidate>
+            <form class="popup__form popup__form-card" name="form-card" novalidate>
                 <h2 class="popup__title">Новое место</h2>
                 <div class="popup__field popup__field_top">
                     <input class="popup__input popup__input_type_title" type="text" value="" placeholder="Название" name="title" id="title-input" minlength="2" maxlength="30" required>
