--- a/index.html
+++ b/index.html
@@ -8,12 +8,12 @@
 </head>
 <body class="page">
     <header class="header">
-        <img class="header__logo" src="../images/logo.svg" alt="Логотип">
+        <img class="header__logo" src="./images/logo.svg" alt="Логотип">
     </header>
     <main class="content">
         <section class="profile">
             <div class="profile__container">
-                <img class="profile__avatar" src="../images/profile__avatar.png" alt="Аватар">
+                <img class="profile__avatar" src="./images/profile__avatar.png" alt="Аватар">
                 <div class="profile__info">
                     <div class="profile__info-top">
                         <h1 class="profile__info-title">Жак-Ив Кусто</h1>
