--- a/src/index.html
+++ b/src/index.html
@@ -13,7 +13,9 @@
     <main class="content">
         <section class="profile">
             <div class="profile__container">
-                <img class="profile__avatar" src="../images/profile__avatar.png" alt="Аватар">
+                <div class="profile__avatar-container">
+                    <img class="profile__avatar" alt="Аватар">
+                </div>
                 <div class="profile__info">
                     <div class="profile__info-top">
                         <h1 class="profile__info-title">Жак-Ив Кусто</h1>
@@ -50,6 +52,20 @@
             </form>
         </div>
     </div>
+    <div class="popup popup_type_avatar">
+        <div class="popup__overlay"></div>
+        <div class="popup__container"> 
+            <button class="popup__close-icon popup__close-avatar" type="reset"></button>   
+            <form class="popup__form popup__form_avatar" name="form-avatar" novalidate>
+                <h2 class="popup__title">Обновить аватар</h2>
+                <div class="popup__field popup__field_avatar">    
+                    <input class="popup__input popup__input_type_avatar" type="url" value="" placeholder="Ссылка на картинку" name="link" id="avatar-input" required>
+                    <span class="popup__input-error avatar-input-error"></span>
+                </div>
+                <button class="popup__button popup__button_avatar" type="submit">Сохранить</button>
+            </form>
+        </div>    
+    </div>
     <div class="popup popup_type_card">
         <div class="popup__overlay"></div>
         <div class="popup__container">   
@@ -68,6 +84,16 @@
             </form>
         </div>
     </div>
+    <div class="popup popup_type_delete">
+        <div class="popup__overlay"></div>
+        <div class="popup__container"> 
+            <button class="popup__close-icon popup__close-delete" type="reset"></button>   
+            <form class="popup__form popup__form-delete" name="form-delete" novalidate>
+                <h2 class="popup__title">Вы уверены?</h2>
+                <button class="popup__button popup__button_delete" type="submit">Да</button>
+            </form>
+        </div>    
+    </div>
     <div class="popup popup_type_image">
         <div class="popup__overlay"></div>
         <div class="popup__wrapper-image">
@@ -82,7 +108,10 @@
             <button class="element__delete" type="button"></button>
             <div class="element__container"> 
                 <h2 class="element__text"></h2>
-                <button class="element__like" type="button"></button>
+                <div class="element__like-container">
+                    <button class="element__like" type="button"></button>
+                    <span class="element__number-likes"></span>
+                </div>
             </div>
         </li>
     </template>
