fix: Исправить после ревью №14

--- a/src/index.html
+++ b/src/index.html
@@ -45,7 +45,7 @@
                     <span class="popup__input-error name-input-error"></span>
                 </div>
                 <div class="popup__field popup__field_bottom">
-                    <input class="popup__input popup__input_type_job" type="text" value="" placeholder="Деятельность" name="job" id="job-input" minlength="2" maxlength="200" required>
+                    <input class="popup__input popup__input_type_job" type="text" value="" placeholder="Деятельность" name="about" id="job-input" minlength="2" maxlength="200" required>
                     <span class="popup__input-error job-input-error"></span>
                 </div>
                 <button class="popup__button" type="submit">Сохранить</button>
@@ -73,7 +73,7 @@
             <form class="popup__form popup__form-card" name="form-card" novalidate>
                 <h2 class="popup__title">Новое место</h2>
                 <div class="popup__field popup__field_top">
-                    <input class="popup__input popup__input_type_title" type="text" value="" placeholder="Название" name="title" id="title-input" minlength="2" maxlength="30" required>
+                    <input class="popup__input popup__input_type_title" type="text" value="" placeholder="Название" name="name" id="title-input" minlength="2" maxlength="30" required>
                     <span class="popup__input-error title-input-error"></span>
                 </div>
                 <div class="popup__field popup__field_bottom">    
