fix: Исправить рендер кнопки сохранения

--- a/src/index.html
+++ b/src/index.html
@@ -48,7 +48,7 @@
                     <input class="popup__input popup__input_type_job" type="text" value="" placeholder="Деятельность" name="about" id="job-input" minlength="2" maxlength="200" required>
                     <span class="popup__input-error job-input-error"></span>
                 </div>
-                <button class="popup__button" type="submit">Сохранить</button>
+                <button class="popup__button popup__button_profile" type="submit">Сохранить</button>
             </form>
         </div>
     </div>
